# capstone_driver

./: .gitignore  CMakeLists.txt  Makefile  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  Previous_test_code.cpp  idf_component.yml  main.cpp
main/V1_Motor/: v1_motor.cpp  v1_motor.h
main/V2_motor/: v2_motor.cpp  v2_motor.h
main/remote/: EspHal.h  remote.cpp  remote.h
